--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <nav>
     <h1>Cuddle Care</h1>
     <ul>
-      <li><a href="index.html">Welcome</a></li>
+  <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="hours.html">Hours</a></li>
@@ -19,11 +19,30 @@
     </ul>
   </nav>
 
-  <section>
-    <h2>Contact Us</h2>
-    <p>📍 Address: Northview Shopping Centre, CNR Olievenhout avenue and Malibongwe Drive, Randburg, Shop number:A7</p>
-    <p>📞 Phone: +27 66 271 9931</p>
-    <p>📧 Email: info@cuddlecare.clinic</p>
+  <section class="contact-section">
+    <h2>Contact Our Clinic</h2>
+    <div class="contact-cards">
+      <div class="contact-card">
+        <span class="icon">📍</span>
+        <h3>Address</h3>
+        <p>Northview Shopping Centre,<br>CNR Olievenhout Avenue & Malibongwe Drive,<br>Randburg, Shop A7</p>
+      </div>
+      <div class="contact-card">
+        <span class="icon">📞✉️</span>
+        <h3>Contact</h3>
+        <p><a href="tel:+27662719931">+27 66 271 9931</a><br>
+        <a href="mailto:info@cuddlecare.clinic">info@cuddlecare.clinic</a></p>
+      </div>
+    </div>
+    <div class="contact-map">
+      <iframe src="https://www.google.com/maps?q=NORTHVIEW+SHOPPING+CENTRE,+CNR+OLIEVENHOUT+AVENUE+AND+MALIBONGWE+DRIVE,+NORTHWOLD,+RANDBURG,+South+Africa&output=embed" title="Cuddle Care Clinic Location Map" allowfullscreen></iframe>
+    </div>
+    <h3>Send Us a Message</h3>
+    <div class="whatsapp-message">
+      <a href="https://wa.me/27662719931" target="_blank" rel="noopener" class="whatsapp-btn">
+        <span class="icon">💬</span> Message us on WhatsApp
+      </a>
+    </div>
   </section>
 
   <footer>
