--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <nav>
     <h1>Cuddle Care</h1>
     <ul>
-      <li><a href="index.html">Welcome</a></li>
+  <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="hours.html">Hours</a></li>
@@ -19,12 +19,83 @@
     </ul>
   </nav>
 
-  <div class="hero">
-    <div>
-      <h2>Welcome to Cuddle Care 💕</h2>
-      <p>Compassionate care for every little heartbeat</p>
-    </div>
-  </div>
+    <header class="hero home-hero soft-bg">
+      <div class="home-hero-content">
+        <img src="logo.jpg" alt="Cuddle Care Clinic Logo" class="home-logo">
+        <h1 class="home-title">Cuddle Care Clinic</h1>
+        <p class="home-subtitle">Compassionate care for every little heartbeat</p>
+        <a href="https://wa.me/27662719931" target="_blank" rel="noopener" class="hero-btn whatsapp-btn">Book an Appointment via WhatsApp</a>
+      </div>
+    </header>
+
+    <main>
+      <section class="mission-intro">
+        <div class="mission-content">
+          <img src="logo.jpg" alt="Clinic Team" class="mission-photo">
+          <div>
+            <h2>About the Clinic</h2>
+            <p>We provide safe, supportive, and confidential care for women and families. Our professional team is dedicated to your health, compassion, and privacy at every step.</p>
+            <ul>
+              <li>Professionalism</li>
+              <li>Compassion</li>
+              <li>Confidentiality</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <section class="services-overview">
+        <h2>Our Services</h2>
+        <div class="services-grid">
+          <div class="service-card">
+            <h3>Antenatal & Postnatal Care</h3>
+            <p>Comprehensive care before and after birth for mothers and babies.</p>
+            <a href="services.html" class="service-btn">Learn More</a>
+          </div>
+          <div class="service-card">
+            <h3>Safe Abortion & Women’s Health</h3>
+            <p>Confidential, safe abortion services and women’s health support.</p>
+            <a href="services.html" class="service-btn">Learn More</a>
+          </div>
+          <div class="service-card">
+            <h3>Fertility & Family Planning</h3>
+            <p>Expert advice and solutions for fertility and family planning.</p>
+            <a href="services.html" class="service-btn">Learn More</a>
+          </div>
+          <div class="service-card">
+            <h3>General Mother & Baby Care</h3>
+            <p>Health checkups, nutrition, and ongoing support for families.</p>
+            <a href="services.html" class="service-btn">Learn More</a>
+          </div>
+        </div>
+      </section>
+
+      <section class="trust-section">
+        <h2>Why Choose Us?</h2>
+        <div class="trust-cards">
+          <div class="trust-card">
+            <span class="trust-icon">🤝</span>
+            <h4>Supportive & Caring</h4>
+            <p>We treat every patient with respect and empathy.</p>
+          </div>
+          <div class="trust-card">
+            <span class="trust-icon">🔒</span>
+            <h4>Confidential</h4>
+            <p>Your privacy is our priority, always.</p>
+          </div>
+          <div class="trust-card">
+            <span class="trust-icon">👩‍⚕️</span>
+            <h4>Professional Team</h4>
+            <p>Experienced doctors, nurses, and counselors.</p>
+          </div>
+          <div class="trust-card">
+            <span class="trust-icon">🌸</span>
+            <h4>Modern, Welcoming Clinic</h4>
+            <p>Comfortable facilities and a warm environment.</p>
+          </div>
+        </div>
+      </section>
+    </main>
 
   <footer>
     <p>© 2025 Cuddle Care: Mother & Baby | All Rights Reserved</p>
