--- a/hours.html
+++ b/hours.html
@@ -10,7 +10,7 @@
   <nav>
     <h1>Cuddle Care</h1>
     <ul>
-      <li><a href="index.html">Welcome</a></li>
+  <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
       <li><a href="hours.html" class="active">Hours</a></li>
@@ -19,11 +19,25 @@
     </ul>
   </nav>
 
-  <section>
-    <h2>Working Hours</h2>
-    <p>Monday - Friday: 8:30 AM - 5:00 PM</p>
-    <p>Saturday: 9:00 AM - 4:00 PM</p>
-    <p>Sunday: Closed</p>
+  <section class="hours-section">
+    <h2>Clinic Operating Hours</h2>
+    <table class="hours-table">
+      <tr><th>Day</th><th>Open</th><th>Close</th></tr>
+      <tr><td>Monday - Friday</td><td>8:30 AM</td><td>5:00 PM</td></tr>
+      <tr><td>Saturday</td><td>9:00 AM</td><td>4:00 PM</td></tr>
+      <tr><td>Sunday</td><td colspan="2">Closed</td></tr>
+    </table>
+    <h3>Location</h3>
+    <p><strong>Building Name:</strong> NORTHVIEW SHOPPING CENTRE</p>
+    <p><strong>Address:</strong> CNR OLIEVENHOUT AVENUE AND MALIBONGWE DRIVE, NORTHWOLD, RANDBURG</p>
+    <p><strong>Shop number:</strong> A7</p>
+    <div class="hours-map">
+      <iframe src="https://www.google.com/maps?q=NORTHVIEW+SHOPPING+CENTRE,+CNR+OLIEVENHOUT+AVENUE+AND+MALIBONGWE+DRIVE,+NORTHWOLD,+RANDBURG,+South+Africa&output=embed" title="Cuddle Care Clinic Location Map" allowfullscreen></iframe>
+    </div>
+    <h3>Contact Details</h3>
+    <p><strong>Phone:</strong> <a href="tel:+27662719931">+27 66 271 9931</a></p>
+    <p><strong>Email:</strong> <a href="mailto:info@cuddlecare.clinic">info@cuddlecare.clinic</a></p>
+    <p>For emergencies, please call ahead.</p>
   </section>
 
   <footer>
