Update clinic website compatibility

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <div class="trust-card">
             <span class="trust-icon">👩‍⚕️</span>
             <h4>Professional Team</h4>
-            <p>Experienced doctors, nurses, and counselors.</p>
+            <p>Virtual doctors, nurses, and counselors.</p>
           </div>
           <div class="trust-card">
             <span class="trust-icon">🌸</span>
