--- a/booking.html
+++ b/booking.html
@@ -98,31 +98,31 @@
     <div class="service-cards">
       <div class="card">
         <h3>🤰 Mother Wellness Checkup</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Mother Wellness Checkup&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for a Mother Wellness Checkup.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Mother Wellness Checkup&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for a Mother Wellness Checkup.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>👶 Baby Health Monitoring</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Baby Health Monitoring&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Baby Health Monitoring.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Baby Health Monitoring&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Baby Health Monitoring.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>🤱 Nutrition & Breastfeeding</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Nutrition & Breastfeeding&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Nutrition & Breastfeeding consultation.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Nutrition & Breastfeeding&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Nutrition & Breastfeeding consultation.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>💪 Postpartum Recovery</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Postpartum Recovery&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Postpartum Recovery care.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Postpartum Recovery&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Postpartum Recovery care.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>👨‍👩‍👧‍👦 Family Planning & Contraception</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Family Planning & Contraception&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Family Planning & Contraception.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Family Planning & Contraception&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for Family Planning & Contraception.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>🤫 Safe & Confidential Abortion Care</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: Safe & Confidential Abortion Care&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book a confidential appointment for Abortion Care.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: Safe & Confidential Abortion Care&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book a confidential appointment for Abortion Care.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
       <div class="card">
         <h3>🩺 General Health Checkups & Screenings</h3>
-        <a href="mailto:clinic@cuddlecare.com?subject=Booking Request: General Health Checkups & Screenings&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for a General Health Checkup & Screening.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
+        <a href="mailto:info@cuddlecare.clinic?subject=Booking Request: General Health Checkups & Screenings&body=Dear Cuddle Care,%0D%0A%0D%0AI would like to book an appointment for a General Health Checkup & Screening.%0D%0A%0D%0AMy preferred date is: [Please enter date here]%0D%0A%0D%0APlease let me know about availability.%0D%0A%0D%0AThank you." class="book-btn">Book Now</a>
       </div>
     </div>
   </section>
